fix(connected-users-info): update dark mode, update width, max height, overflow y

--- a/frontend/src/app/components/connected-users-info/connected-users-info.dark.component.scss
+++ b/frontend/src/app/components/connected-users-info/connected-users-info.dark.component.scss
@@ -4,8 +4,7 @@ $border-radius: 4px;
 
 .connected-users-info.#{$flat-dark-theme-class-name} {
   box-sizing: border-box;
-  width: 224px;
-  height: 256px;
+  width: 320px;
   color: $dark-text-color;
 
   .header {
@@ -22,14 +21,17 @@ $border-radius: 4px;
   }
 
   .content {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     padding: 16px;
+    max-height: 256px - 64px;
     background-color: $dark-primary-a30;
     border-left: 1px solid $dark-border-color;
     border-right: 1px solid $dark-border-color;
     border-bottom: 1px solid $dark-border-color;
     border-bottom-left-radius: $border-radius;
     border-bottom-right-radius: $border-radius;
+    overflow-y: scroll;
   }
 }
